  * 2016-06-16 fimex-0.63.1
    * no code changes
    * bugfixes for parallel build
  * 2016-05-23 fimex-0.63
    * bugfixes:
      * CDMInterpolator->getDataSlice(slicebuilder)
      * problems with get_var_longitude/latitude in c_fimex (api change)
  * 2016-04-28 fimex-0.62.1
    * performance improvements:
      * implement CDMInterpolator->getDataSlice(slicebuilder)
      * vectorize mifi_nanf2bad
  * 2016-04-19 fimex-0.62
    * new high-level fortran90 fimex2d API
    * supporting grib-files > 2GB on 32bit platforms
    * enabling parallel grib reading when grib_api build with --enable-pthreads
    * parallelizing FillWriter/fillFile
    * lazy error-handling in FillWriter/fillFile, writing more data even when errors are found
    * supporting WRF-output without Times-axis
  * 2016-01-19 fimex-0.61.1
    * bugfix: extraction of unlimited dimension ignores all offsets
  * 2015-12-21 fimex-0.61
    * improved merge options
      * both inputs fully configurable
      * outer variables may be kept even when no inner exist
      * improved documentation with real world example
    * adding extract.pickDimension for striding
    * support for ensembles/realization axes
    * improve performance of grib-reading with SliceBuilder
      * fix bug when reading grib-files with <ensemble no=“0” total=“220” />
      * no longer reading repeatedly level-data
    * fiGrbmlCat: Fast merger of grbml-files, parallel grbml-file generation possible
    * packages with debug-symbols
    * avoid too small chunks in netcdf4
    * micro-performance optimization (vectorization mostly for interpolation)
  * 2015-10-26 fimex-0.60
    * grib-indexing with explicit ensemble data and earth figure
    * using etmerc instead of tmerc for transverse mercator, with proj 4.8.0
    * better check for simpleSpatial data
    * fixing missing value handling for grib-precision scaling
    * improve MPI-handling
    * output.config for fillWriter, allowing special selection of slices