@@ -1,3 +1,6 @@
+  * 2016-10-16? fimex-0.65.0
+    * round to nearest when converting floating point to integer
+
   * 2016-06-16 fimex-0.63.1
     * no code changes
     * bugfixes for parallel build
